--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script>
         // Auth Guard: If logged in, redirect to dashboard
         if (localStorage.getItem('isLoggedIn') === 'true') {
-            window.location.href = './dashboard.html';
+            window.location.href = './index.html';
         }
     </script>
 </head>
@@ -19,7 +19,7 @@
         
         <!-- Branding -->
         <div class="text-center mb-8">
-            <a class="flex items-center justify-center gap-3" href="./dashboard.html">
+            <a class="flex items-center justify-center gap-3" href="./index.html">
                 <img src="n2.png" alt="CryptoWin Logo" class="w-15 h-12 object-contain rounded-xl">
                 <div class="text-3xl font-extrabold tracking-tight text-white">
                     Crypto<span class="hero-gradient">N2</span>
